# literature-reviewer

./: .env.template  .gitignore  NEXT_STEP_10252024.md  NOTES.md  README.md  ell.db  pyproject.toml
inspiration/: comparison_to_ai_scientist.md
llm_outputs/writeups/: full_literature_review.md
logdir/: ell.db
outputs/TEST2_20241117_010101/writeup/: enriched_outline.json  full_writeup.md  initial_outline.json
outputs/TEST_20241116_053017/writeup/: enriched_outline.json  full_writeup.md  initial_outline.json
outputs/TEST_20241116_234328/writeup/: enriched_outline.json  full_writeup.md  initial_outline.json
outputs/test_writing/: enriched_outline.json  full_writeup.md  initial_outline.json
ref/: Guy_Aubin_Bracing_2024.md  Guy_Aubin_Bracing_2024_meta.json
src/literature_reviewer/: agent_create_review.py  create_review.py  create_review_deterministic.py
src/literature_reviewer/agents/: agency.py  agent.py  agent_pydantic_models.py  board.py  model_call.py  o1_agent.py
src/literature_reviewer/components/: tool.py
src/literature_reviewer/graph/: agent_create_review.py
src/literature_reviewer/llm_prompting/: literature_analysis.py
src/literature_reviewer/orchestration/: cluster_analysis.py  gather_the_corpus.py  get_initial_search_queries.py  review_creation.py
src/literature_reviewer/preprocessing/: extract_from_pdf.py
src/literature_reviewer/tasks/: analyze_clusters.py  (+2 more)
tests/: TEST_README.md  conftest.py
tests/examples/: controlflow_flow_example.py
tests/ideas/: controlflow_test.py
tests/literature_search/: test_search_semantic_scholar.py
tests/model_interaction/: test_llm_call.py  test_model_call.py
tests/preprocessing/: test_extract_from_pdf.py
user_inputs/: goal_prompt.txt  goal_prompt_ais.txt  goal_prompt_random.txt  reference_dois.txt
(+60 files in other folders)
